Updated from Publii

--- a/initialize_sequence.html
+++ b/initialize_sequence.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>INITIALIZE_SEQUENCE - Maxwell Cross  - </title>
+    <title>newsletter - Maxwell Cross  - </title>
     <meta name="description" content="<meta name="description" content="Maxwell Cross Get the tutorials I can't post on Medium. Join the inner circle. Exclusive red team techniques, offensive security breakdowns, and raw unfiltered content — straight to your inbox. No spam. Unsubscribe anytime.">">
     
     
